--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,8 @@
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
-        "jsonwebtoken": "^9.0.0"
+        "jsonwebtoken": "^9.0.0",
+        "zod": "^3.24.4"
     },
     "devDependencies": {
         "@types/bcryptjs": "^2.4.2",
